--- a/.github/workflows/05-Simple-Scenario.yml
+++ b/.github/workflows/05-Simple-Scenario.yml
@@ -62,3 +62,4 @@ jobs:
         tf_actions_version: 1.1.7
         tf_actions_subcommand: 'apply'
         tf_actions_working_dir: "./05-Simple-Scenario"
+        args: "-var-file='./05-Simple-Scenario/env/dev.tfvars'"
